deleted rainbow js, fixed some styling, and heading spacing.

--- a/app/styles/components/_global.scss
+++ b/app/styles/components/_global.scss
@@ -507,7 +507,7 @@ td, th{
 // Badges
 span.badge {
   min-width: 3rem;
-  padding: 0 6px;
+  padding: 2px 6px;
   text-align: center;
   font-size: 1rem;
   line-height: inherit;
